@@ -12,6 +12,7 @@
   * Be more careful checking XML when printing RSpec (#791)
   * Put a refresh button the sliver status page (#451)
   * Show something for ExoGENI hostnames in details page (#767)
+  * Remove 2 more uses of slice-member.php (#328)
 
 == 2.1 ==
   * Revise handling of Google Analytics (#742)
